<resources>
    <string name="appName">TravelPlanner</string>
    <string name="actionDeleteItem">Item Deleted</string>
    <string name="actionUndo">UNDO?</string>
    <string name="errorNoExtraFound">Error Retrieving Item Detail</string>

    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_show_outdated_list">Archive</string>

    <string name="create_set_btn">Set</string>
    <string name="create_edit_btn">Edit</string>
    <string name="create_add_btn">Add</string>
    <string name="create_due_date_lbl">Due Date</string>
    <string name="create_start_date_lbl">Start Date</string>
    <string name="create_end_date_lbl">End Date</string>
    <string name="create_main_destination_lbl">Main destination</string>
    <string name="create_locations_lbl">Locations</string>
    <string name="create_people_lbl">People</string>

    <string name="travel_created_successfully_message">New travel plan has been created successfully</string>
    <string name="no_main_destination_error">No main destination set</string>
    <string name="person_name_surname">%1$s %2$s</string>
    <string name="person_added_successfully">%1$s %2$s is added to people list</string>
    <string name="location_added_successfully">Added %1$s to locations list</string>
    <string name="main_destination_set_successfully">%s is set as main travel destination</string>

    <string name="menu_delete_trip_title">Delete trip</string>
    <string name="menu_mark_destination_title">Mark Destination on map</string>
    <string name="menu_calculate_expenses_title">Calculate expenses</string>

    <string name="date_format_string">EEE, MMM d, \'\'yy</string>
    <string name="alternate_date_format_string">yyyy/MM/dd</string>
    <string name="alternate_date_format_string1">yyyy/MM/dd/kk:mm:ss</string>

    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>


    <string name="add_person_title">Add Person</string>
    <string name="add_person_name_lbl">Name</string>
    <string name="add_person_surname_lbl">Surname</string>
    <string name="add_person_email_lbl">Email</string>
    <string name="blank_person_name_error">Enter person name!</string>
    <string name="blank_person_surname_error">Enter person name!</string>
    <string name="blank_person_email_error">Enter person name!</string>

    <!-- used as tags for shared element transitions -->
    <string name="transitionDrawable">drawable</string>
    <string name="transitionMessage">message</string>
    <string name="transitionTimeAndDate">date</string>

    <string name="listActivityToolbar">Travel list</string>
    <string name="loginActivityToolbar">Login</string>
    <string name="singInActivityToolbar">Sign in</string>

    <string name="signInLoginBtn">Don\'t have an account? Sign in</string>
    <string name="loginBtn">Login</string>
    <string name="signInBtn">Sign In</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextRepeatPassword">Repeat Password</string>

    <string name="active_user_preference_name">com.gmail.arnasrad.travelplanner.ACTIVE_ACCOUNT_PREFERENCE_NAME</string>
    <string name="active_user_key">username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
