<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootActivityDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imvColoredBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divCenter"
        android:scaleType="centerCrop"
        android:transitionName="@string/transitionDrawable" />


    <TextView
        android:id="@+id/lblDateAndTimeHeader"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblMessageBody"
        android:background="@color/colorTransparentBlack"
        android:padding="16dp"
        android:transitionName="@string/transitionTimeAndDate"
        tools:text="2:43AM 09/7/2018" />

    <View
        android:id="@+id/divCenter"
        style="@style/Text.Primary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"

        />

    <TextView
        android:id="@+id/lblMessageBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divCenter"
        android:padding="16dp"
        android:transitionName="@string/transitionMessage"
        tools:text="Check out content like Fragmented Podcast to expose yourself to the knowledge, ideas, and opinions of experts in your field" />
</RelativeLayout>
